--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -44,6 +44,14 @@
      // justify-content: center;
     }
 
+    ion-title {
+      font-family: "Pacifico" !important;
+      }
+
+      ion-label{
+        font-family: "Pacifico" !important;
+      }
+
     #nvm {
       left: 40%;
       top: 65%;
