--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title>
-      WIPPED
+     <h4> Wipped </h4>
     </ion-title>
   </ion-toolbar>
 </ion-header>
