--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,8 +1,5 @@
 
-ion-content {
 
-    --ion-background-color:rgb(202, 202, 202);
-} 
 
 .card-background-page {
 
@@ -29,5 +26,11 @@ ion-content {
     }
   
   }
+
+
+  ion-title {
+    font-family: "Pacifico" !important;
+  }
+
 
  
