--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -5,6 +5,7 @@
       position: relative;
       text-align: center;
     }
+
   
     .card-title {
       position: absolute;
@@ -23,4 +24,8 @@
       color: #fff;
     }
   
+  }
+
+  ion-title {
+    font-family: "Pacifico" !important;
   }
