--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -45,12 +45,12 @@
     }
 
     ion-title {
-      font-family: "Pacifico" !important;
+      font-family: 'Pacifico';
       }
 
       ion-label{
-        font-family: "Pacifico" !important;
-      }
+        font-family: 'Pacifico';
+      } 
 
     #nvm {
       left: 40%;
