font added to tabs

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -45,11 +45,12 @@
     }
 
     ion-title {
-      font-family: 'Pacifico';
+     // font-family: 'Pacifico';
+
       }
 
       ion-label{
-        font-family: 'Pacifico';
+       font-family: 'Pacifico' !important;
       } 
 
     #nvm {
