--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title>
-      Wipping
+    <h4> Wipping </h4>
     </ion-title>
   </ion-toolbar>
 </ion-header>
