--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/tab4"></ion-back-button>
     </ion-buttons>
-    <ion-title>Details</ion-title>
+    <ion-title>{{item.payload.doc.data().title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding color="medium">
     <ion-row>
         <ion-col size="6" offset="3">
-          <ion-button color="light" fill="outline" expand="block" size="small" (click)="openImagePicker()">Change Picture</ion-button>
+          <ion-button color="light"  size="small" (click)="openImagePicker()">Add Picture</ion-button>
         </ion-col>
       </ion-row>
   <div  *ngFor ="let image of image">
