--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,7 +15,7 @@
       </ion-refresher>
     </div>  
     <div *ngIf="posts">
-        <ion-card *ngFor ="let post of posts">
+        <ion-card *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/id']">
           <img [src]="post.image">
             <div class="card-title">{{ post.title}}</div>
         </ion-card>
