--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -31,10 +31,10 @@
   <ion-toolbar color="medium">
 <ion-segment (ionChange)="segmentChanged()" [(ngModel)]="segment" color="secondary">
   <ion-segment-button value = "0">
-    <ion-icon name="heart"></ion-icon>WIPPED
+    <ion-icon name="heart"></ion-icon>Wipped
   </ion-segment-button>
   <ion-segment-button value="1">
-    <ion-icon name="heart-half"></ion-icon>WIPPING
+    <ion-icon name="heart-half"></ion-icon>Wipping
   </ion-segment-button>
 </ion-segment>
 </ion-toolbar>
