--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,50 +1,60 @@
-<ion-header>
-  <ion-toolbar color="dark">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/tab4"></ion-back-button>
-    </ion-buttons>
+<ion-content >
     <ion-title *ngIf="item">{{item.title}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding color="medium">
-    <ion-row>
-        <ion-col size="6" offset="8">
-          <ion-button color="tertiary"  size="small" (click)="openImagePicker()">Add Picture</ion-button>
-        </ion-col>
-      </ion-row>
-  <div  *ngFor ="let image of image" >
-    <ion-row>
-      <ion-col size="12" offset="0">
-        <img id ="image" [src]="image" alt="this is the image"/>
-      </ion-col>  
-    </ion-row>
+  <div class="container">
+  <div class="content">
+    <div *ngFor ="let image of image" >
+        <ion-row>
+          <ion-col size="12" offset="0">
+            <img  id ="image" [src]="image" alt="this is the image"/>
+          </ion-col>  
+        </ion-row>
+      </div>
+    </div>
+    <div class="overlay">
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/tabs/tab4"></ion-back-button>
+          </ion-buttons>
+          <h2>{{item.title}}</h2>
+          <p>{{item.description}}</p></div>
   </div>
- <ion-grid>
-   <ion-row>
-     <ion-col>
-      <h5 id="description"> {{item.description}} </h5>
-     </ion-col>
-     </ion-row>
-   </ion-grid>
-  <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
-    <ion-item>
-      <ion-label position="floating" >Title</ion-label>
-      <ion-input type="text" formControlName="title"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Description</ion-label>
-      <ion-input type="text" formControlName="description"></ion-input>
-    </ion-item>
-    <ion-item color="dark">
-        <ion-label color="dark">Category</ion-label>
-        <ion-select color="dark" placeholder="Category" formControlName="category">
-          <ion-select-option color="dark" value="Wipped">Wipped</ion-select-option>
-          <ion-select-option  color="dark"value="Wipping">Wipping</ion-select-option>
-        </ion-select>
-      </ion-item>
-    <ion-button class="submit-button" expand="full" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
-  </form>
-  <ion-button class="delete-button" expand="full" color="light" (click)="delete()">Delete</ion-button>
-
 </ion-content>
+
+
+
+
+
+<!-- <div class="container">
+    <div class="content"  *ngFor ="let image of image" >
+      <ion-row>
+        <ion-col size="12" offset="0">
+          <img  id ="image" [src]="image" alt="this is the image"/>
+        </ion-col>  
+      </ion-row>
+    </div>
+    <div class="overlay">
+    <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
+      <ion-item>
+        <ion-label position="floating" >Title</ion-label>
+        <ion-input type="text" formControlName="title"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Description</ion-label>
+        <ion-input type="text" formControlName="description"></ion-input>
+      </ion-item>
+      <ion-item color="dark">
+          <ion-label color="dark">Category</ion-label>
+          <ion-select color="dark" placeholder="Category" formControlName="category">
+            <ion-select-option color="dark" value="Wipped">Wipped</ion-select-option>
+            <ion-select-option  color="dark"value="Wipping">Wipping</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-row>
+          <ion-col size="6" offset="8">
+            <ion-button color="tertiary"  size="small" (click)="openImagePicker()">Add Picture</ion-button>
+          </ion-col>
+        </ion-row>
+      <ion-button class="submit-button" expand="full" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
+    </form>
+    <ion-button class="delete-button" expand="full" color="light" (click)="delete()">Delete</ion-button>
+  </div>
+  </div> -->
