--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,14 +7,17 @@
 </ion-header>
 
   <ion-content class="card-background-page" color="medium">
-    <div class="ion-padding">
+      <div style="text-align: center;">
+          <ion-spinner style="text-align: center; margin: auto;"  *ngIf="!posts"></ion-spinner>  
+        </div> 
+    <div>
     <ion-refresher  (ionRefresh)="tabTwoFeed($event)">
       <ion-refresher-content pullingIcon="arrow-dropdown" 
        refreshingSpinner="circles" refreshingText="refreshing..">
       </ion-refresher-content>
       </ion-refresher>
     </div>  
-    <div *ngIf="posts">
+    <div *ngIf="posts" style="margin-top: 20px;">
         <ion-card *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/', post.postID]">
           <img [src]="post.image">
             <div class="card-title">{{ post.title}}</div>
