--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,7 +7,10 @@
 </ion-header>
 
 <ion-content class="card-background-page" color="medium">
-    <div class="ion-padding">
+  <div style="text-align: center;">
+    <ion-spinner style="text-align: center; margin: auto;"  *ngIf="!posts"></ion-spinner>  
+  </div> 
+    <div>
     <ion-refresher  (ionRefresh)="tabThreeFeed($event)">
       <ion-refresher-content pullingIcon="arrow-dropdown" 
        refreshingSpinner="circles" refreshingText="refreshing..">
