--- a/src/app/details-feed/details-feed.page.html
+++ b/src/app/details-feed/details-feed.page.html
@@ -10,9 +10,16 @@
       </div>
     </div>
     <div class="overlay">
-        <div>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
             <ion-button shape ="round" (click)="navigateBack()"> <ion-icon name="arrow-back"></ion-icon></ion-button>
-        </div>
+          </ion-col>
+          <ion-col>
+              <ion-button shape ="round" (click)="navigateBack()"> <ion-icon name="arrow-back"></ion-icon>Edit</ion-button>
+            </ion-col>
+          </ion-row>
+          </ion-grid>
           <h2>{{item.title}}</h2>
           <p>{{item.description}}</p></div>
   </div>
