--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,8 +1,20 @@
 <ion-content >
     <ion-title *ngIf="item">{{item.title}}</ion-title>
+    <div [@editText]="state" >
+      <ion-button (click)="editTextClosed()">Photo</ion-button>
+    </div>
+    <div [@elementState]="state">
+      <div style ="text-align: end">
+      <ion-button (click)= "editClosed()"><ion-icon name="close"></ion-icon></ion-button>
+    </div>
+    <div style ="text-align: center; z-index:4">
+        <ion-button shape="circle"  color="tertiary"  (click)="openImagePicker()">  <ion-icon name="images"></ion-icon><h6> Add Picture</h6></ion-button>
+        <ion-button (click)="editText()"> Edit Text </ion-button>
+      </div>
+  </div>
   <div class="container">
   <div class="content">
-    <div *ngFor ="let image of image" >
+    <div *ngFor ="let image of image">
         <ion-row>
           <ion-col size="12" offset="0">
             <img  id ="image" [src]="image" alt="this is the image"/>
@@ -18,7 +30,7 @@
                     <ion-button shape ="round" (click)="navigateBack()"><ion-icon name="arrow-back"></ion-icon></ion-button>
                   </ion-col>
                   <ion-col style ="text-align: end">
-                      <ion-button shape ="round" (click)="makeOpaque()"><ion-icon name="more"></ion-icon></ion-button>
+                      <ion-button shape ="round" (click)="editOpen()"><ion-icon name="more"></ion-icon></ion-button>
                     </ion-col>
                   </ion-row>
                   </ion-grid>
@@ -32,7 +44,8 @@
   <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
       <ion-button class="submit-button" expand="full" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
     </form>
-    <div [@elementState]="state"></div>
+    
+    <div >This state changes</div>
 </ion-content>
 
 
