--- a/src/app/details/details.page.scss
+++ b/src/app/details/details.page.scss
@@ -9,6 +9,15 @@
   border-radius: 4px;
 }
 
+#onTop {
+  z-index: 4 !important;
+  height: 400px;
+  width: 100%;
+  background-color: yellow;
+  margin-top: 100px;
+  position:absolute;
+}
+
 .container {
   display: grid;
   grid-template-rows: max-content minmax(0, 1fr);
