--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,16 +1,20 @@
 <ion-content >
     <ion-title *ngIf="item">{{item.title}}</ion-title>
-    <div [@editText]="state" >
-      <ion-button (click)="editTextClosed()">Photo</ion-button>
-    </div>
     <div [@elementState]="state">
       <div style ="text-align: end">
       <ion-button (click)= "editClosed()"><ion-icon name="close"></ion-icon></ion-button>
     </div>
-    <div style ="text-align: center; z-index:4">
-        <ion-button shape="circle"  color="tertiary"  (click)="openImagePicker()">  <ion-icon name="images"></ion-icon><h6> Add Picture</h6></ion-button>
-        <ion-button (click)="editText()"> Edit Text </ion-button>
-      </div>
+    <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
+        <ion-item>
+          <ion-label position="floating" >Title</ion-label>
+          <ion-input type="text" formControlName="title"></ion-input>
+        </ion-item>
+        <ion-item >
+            <ion-label position="stacked"></ion-label>
+            <ion-textarea  inputmode="text" auto-grow="true" formControlName="description"></ion-textarea>
+          </ion-item>
+        <ion-button class="submit-button" expand="full" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
+      </form>
   </div>
   <div class="container">
   <div class="content">
@@ -32,6 +36,11 @@
                   <ion-col style ="text-align: end">
                       <ion-button shape ="round" (click)="editOpen()"><ion-icon name="more"></ion-icon></ion-button>
                     </ion-col>
+                  </ion-row>
+                  <ion-row>
+                      <ion-col style ="text-align: end">
+                          <ion-button shape ="round" (click)="openImagePicker()"><ion-icon name="image"></ion-icon></ion-button>
+                        </ion-col>
                   </ion-row>
                   </ion-grid>
           </ion-buttons>
