--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -48,13 +48,22 @@
           <p>{{item.description}}</p>
         </div>
   </div>
-
+<div style="text-align: center">
   <ion-button shape="circle"  color="tertiary"  (click)="openImagePicker()">  <ion-icon name="images"></ion-icon><h6> Add Picture</h6></ion-button>
-  <form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
-      <ion-button class="submit-button" expand="full" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
-    </form>
-    
-    <div >This state changes</div>
+</div>
+
+<form [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)">
+    <ion-item>
+      <ion-label position="floating" >Title</ion-label>
+      <ion-input type="text" formControlName="title"></ion-input>
+    </ion-item>
+    <ion-item >
+        <ion-label position="stacked"></ion-label>
+        <ion-textarea  inputmode="text" auto-grow="true" formControlName="description"></ion-textarea>
+      </ion-item>
+    <ion-button class="submit-button" expand="full" color="light" type="submit" [disabled]="!validations_form.valid">Save</ion-button>
+  </form>
+  <ion-button class="delete-button" expand="full" color="light" (click)="delete()">Delete</ion-button>
 </ion-content>
 
 
