--- a/src/app/details/details.page.scss
+++ b/src/app/details/details.page.scss
@@ -31,7 +31,7 @@
   width: 100%;
   grid-row: 1 / 2;
   border-radius:  0px 0px 25px 25px; 
-  background-color: #797979;
+  background-color: #ffffff;
   opacity: 1;
   margin-bottom: -19px;
   position: relative;
