--- a/src/app/details-feed/details-feed.page.html
+++ b/src/app/details-feed/details-feed.page.html
@@ -13,11 +13,8 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-button shape ="round" (click)="navigateBack()"> <ion-icon name="arrow-back"></ion-icon></ion-button>
+            <ion-button  color="dark"shape ="round" (click)="navigateBack()"> <ion-icon name="arrow-back"></ion-icon></ion-button>
           </ion-col>
-          <ion-col>
-              <ion-button shape ="round" (click)="navigateBack()"> <ion-icon name="arrow-back"></ion-icon>Edit</ion-button>
-            </ion-col>
           </ion-row>
           </ion-grid>
           <h2>{{item.title}}</h2>
