--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Settings</ion-title>
+    <ion-button type ="round" slot="end"  fill = "outline"(click)="gobacktoProfile" color="light">Back</ion-button>
   </ion-toolbar>
 </ion-header>
 
