--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -17,8 +17,8 @@
       </ion-refresher-content>
       </ion-refresher>
     </div>  
-    <div *ngIf="posts">
-        <ion-card *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/', post.postID]">
+    <div *ngIf="posts" style="padding-top: 40px!important;">
+        <ion-card style="margin-top: 40px "  *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/', post.postID]">
           <img [src]="post.image">
             <div class="card-title">{{ post.title}}</div>
         </ion-card>
