--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -2,7 +2,7 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title >Profile</ion-title>
-    <ion-button type ="round" slot="end"  fill = "outline"(click)="logout()" color="light">
+    <ion-button type ="round" slot="end"  fill = "outline"(click)="gotoeditPage()" color="light">
       <ion-icon name="exit">
       </ion-icon>
     </ion-button>
@@ -20,7 +20,7 @@
 <ion-row align-items-center>
     <ion-col ></ion-col>
     <ion-col size="4" offset="1">
- <p>Username</p>
+ <p style="color: black !important">Username</p>
  </ion-col>
  <ion-col ></ion-col>
 </ion-row>
@@ -29,7 +29,7 @@
 
 
   <ion-toolbar color="medium">
-<ion-segment (ionChange)="segmentChanged()" [(ngModel)]="segment" color="secondary">
+<ion-segment style="width: 100%"(ionChange)="segmentChanged()" [(ngModel)]="segment" color="dark">
   <ion-segment-button value = "0">
     <ion-icon name="heart"></ion-icon>Wipped
   </ion-segment-button>
