--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -2,8 +2,8 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title >Profile</ion-title>
-    <ion-button type ="round" slot="end"  fill = "outline"(click)="gotoeditPage()" color="light">
-      <ion-icon name="exit">
+    <ion-button type ="round" slot="end"  (click)="gotoeditPage()" color="light">
+        <ion-icon name="menu">
       </ion-icon>
     </ion-button>
   </ion-toolbar>
