--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -8,13 +8,13 @@
 <ion-content>
 <ion-button (click)="chooseProfilePic()" >Choose Profile Pic</ion-button>
 
-<img style="border-radius: 50%; height: 80px; width: 80px;" [src]= "profileImage"> 
+ <img style="border-radius: 50%; height: 80px; width: 80px;" [src]= "profileImage"> 
 
-<ion-button (click)="saveChanges()">Save Changes</ion-button>
+<!-- <ion-button (click)="saveChanges()">Save Changes</ion-button>
 
 <div class="container">
  
-    <div class="row" style="margin-top: 25px;">
+   <div class="row" style="margin-top: 25px;">
         <div class="col-md-3">
           <input type="text" class="form-control" [(ngModel)]="userName" placeholder="user name">
         </div>
@@ -59,8 +59,89 @@
           </div>
         </div>
       </div>
-  </div>
-</ion-content>
+  </div> -->
+  
+  //
+
+
+  <ion-grid fixed>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-input placeholder="User Name" [(ngModel)]="userName"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-input placeholder="UserBio" [(ngModel)]="userBio"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col text-center>
+          <ion-button (click)="CreateRecord()" [disabled]="!userBio || !userName">
+            <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
+            &nbsp;Create Record
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+   
+   
+    <ion-card *ngFor="let item of students">
+      <span *ngIf="!item.isEdit; else elseBlock">
+        <ion-card-header>
+          <ion-card-title>{{item.userName}} of {{item.userBio}} </ion-card-title>
+          <img [src]="item.profileImage">
+        </ion-card-header>
+        <ion-card-content>
+   
+          <ion-button shape="round" color="secondary" size="small" (click)="EditRecord(item)">
+            <ion-icon size="small" slot="icon-only" name="create"></ion-icon>
+   
+          </ion-button>
+          <ion-button shape="round" color="danger" size="small" (click)="RemoveRecord(item.id)">
+            <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
+   
+          </ion-button>
+        </ion-card-content>
+      </span>
+      <ng-template #elseBlock>
+        <ion-card-header>
+          <ion-card-title>
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  Edit
+                </ion-col>
+                <ion-col>
+                  <ion-button fill="clear" color="medium" size="small" (click)="item.isEdit = false">
+                    Cancel
+                  </ion-button>
+                </ion-col>
+                <ion-col>
+                  <ion-button fill="outline" color="success" size="small" (click)="UpdateRecord(item)">
+                    Update
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-item>
+            <ion-label><strong>Name</strong></ion-label>
+            <ion-input type="text" [(ngModel)]="item.EdituserName"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label><strong>UserBio</strong></ion-label>
+            <ion-input type="text" [(ngModel)]="item.EdituserBio"></ion-input>
+          </ion-item>
+        </ion-card-content>
+      </ng-template>
+    </ion-card>
+   
+
 
 
 
