--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -34,6 +34,6 @@
     </form>
     
     <p class="go-to-register">
-      No account yet? <a (click)="goRegisterPage()">Create an account.</a>
+      No account yet? <ion-button routerLink="/register">Register</ion-button>
     </p>
   </ion-content>
