--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -35,6 +35,6 @@
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
-  <p class="go-to-login">Already have an account? <a (click)="goLoginPage()">Try to Log In.</a></p>
+  <p class="go-to-login">Already have an account? <ion-button routerLink="/login">Login</ion-button></p>
 
 </ion-content>
