--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -75,7 +75,7 @@
           </ion-item>
       <ion-row>
         <ion-col text-center>
-          <ion-button (click)="CreateRecord()" [disabled]="!userBio || !userName">
+          <ion-button (click)="CreateRecord()">
             <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
             &nbsp;Create Record
           </ion-button>
@@ -87,9 +87,6 @@
     <div *ngFor="let item of students">
           <p>{{item.userName}} of {{item.userBio}} </p>
           <img [src]="item.profileImage">
-          <ion-button shape="round" color="secondary" size="small" (click)="EditRecord(item)">
-            Edit Record
-        </ion-button>
       <!--     <ion-button shape="round" color="danger" size="small" (click)="RemoveRecord(item.id)">
            Remove Record
           </ion-button> -->
@@ -101,18 +98,19 @@
                   </ion-button>
            
                   <ion-button fill="outline" color="success" size="small" (click)="UpdateRecord(item)">
-                    Update
+                    Save Changes 
                   </ion-button>
      
  
           <ion-item>
             <ion-label><strong>Name</strong></ion-label>
-            <ion-input type="text" [(ngModel)]="item.EdituserName"></ion-input>
+            <ion-input type="text" [(ngModel)]="item.userName"></ion-input>
           </ion-item>
 
           <ion-item>
+            <!-- this updates the user name  -->
             <ion-label><strong>UserBio</strong></ion-label>
-            <ion-input type="text" [(ngModel)]="item.EdituserBio" clearInput="false">{{item.userBio}}</ion-input>
+            <ion-input type="text" [(ngModel)]="item.userBio" clearInput="false" value="custome"></ion-input>
           </ion-item>
  
    
