--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -6,12 +6,27 @@
 </ion-header>
 
 <ion-content>
- <ion-grid>
+ <ion-grid style ="text-align: center">
   <ion-row style ="text-align: center">
- <img   *ngIf="!students.length > 0" style="border-radius: 50%; height: 120px; " [src]= "profileImage"> 
+
+  <!--     *ngIf="!students.length > 0"  
+    <ion-col>
+ <img   style="border-radius: 50%; height: 120px;" [src]= "profileImage || item.profileImage"> 
+    </ion-col>
+   *ngIf="!students.length == 0" 
+    <ion-col *ngFor="let item of students">
+ <img    style="border-radius: 50%; height: 120px; " [src]="item.profileImage"> 
+</ion-col>
+ -->
+
+ <ion-col>
+    <img   style="border-radius: 50%; height: 120px;" [src]= "profileImage"> 
+ </ion-col>
 </ion-row>
-<ion-row  style ="text-align: center">
- <ion-button (click)="chooseProfilePic()" >Choose Profile Photo</ion-button>
+<ion-row  style ="text-align: center">  
+    <ion-col>
+ <ion-button  size="small" fill="outline" (click)="chooseProfilePic()" >Choose Profile Photo</ion-button>
+</ion-col>
 </ion-row>
 </ion-grid>
 
@@ -77,7 +92,7 @@
           <ion-item>
             <ion-input placeholder="About Me " [(ngModel)]="userBio"></ion-input>
           </ion-item>
-           <ion-button *ngIf="!students.length > 1"  (click)="chooseProfilePic()" >Choose Profile Photo</ion-button>
+           <ion-button *ngIf="!students.length > 1"  size="small"  (click)="chooseProfilePic()" >Choose Profile Photo</ion-button>
       <ion-row>
         <ion-col text-center>
           <ion-button (click)="CreateRecord()">
@@ -89,7 +104,6 @@
    
    
     <div *ngFor="let item of students">
-          <img [src]="item.profileImage">
       <!--     <ion-button shape="round" color="danger" size="small" (click)="RemoveRecord(item.id)">
            Remove Record
           </ion-button> -->
@@ -100,26 +114,28 @@
                     Cancel
                   </ion-button>
            
-                  <ion-button fill="outline" color="success" size="small" (click)="UpdateRecord(item)">
-                    Save Changes 
-                  </ion-button>
+                 
      
       
           <ion-item>
             <ion-label><strong>Name</strong></ion-label>
-            <ion-input type="text" [(ngModel)]="item.userName"></ion-input>
+            <ion-input type="text" [(ngModel)]="item.EdituserName"></ion-input>
           </ion-item>
 
           <ion-item>
             <!-- this updates the user name  -->
             <ion-label><strong>About me</strong></ion-label>
-            <ion-input type="text" [(ngModel)]="item.userBio" clearInput="false" value="custome"></ion-input>
+            <ion-input type="text" [(ngModel)]="item.EdituserBio" clearInput="false" value="custome"></ion-input>
           </ion-item>
-
-       
- 
+<div style ="text-align: center">
+          <ion-button (click)="UpdateRecord(item)">
+              Save Changes 
+            </ion-button>
+          </div>
    </div>
-  <ion-button (click) = "logout()">Logout</ion-button>
+   <div style="text-align: center">
+  <ion-button size="small" fill="outline"(click) = "logout()">Logout</ion-button>
+</div>
    </ion-content>
 
 
